# codefix-env

./: .env.example  .gitignore  Dockerfile  README.md  app.py  benchmark.py  inference.py  models.py  openenv.yaml  predeploy_check.py  pyproject.toml  requirements.txt  settings.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
env/: actions.py  environment.py  logic.py  reward.py  session_manager.py  state.py
graders/: grader.py  testcases.py
models/: request_models.py  response_models.py
scripts/: validate-submission.sh
server/: __init__.py  app.py
static/: index.html
tasks/: easy.py  expert.py  hard.py  medium.py  nightmare.py  task_loader.py
tests/: test_actions_and_reward.py  test_app_benchmark_e2e.py  test_benchmark.py  test_env.py  test_grader_and_executor.py  test_grader_anticheat.py  test_helpers_and_session.py  test_inference.py  test_predeploy_check.py  test_task_loader_and_utils.py
utils/: code_executor.py  diff_utils.py  logger.py
