[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[project]
name = "codefix-env"
version = "1.0.0"
description = "OpenEnv-compatible code debugging environment"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "CodeFixEnv Team" }
]
dependencies = [
  "fastapi==0.115.12",
  "uvicorn[standard]==0.34.0",
  "pydantic==2.11.3",
  "requests==2.32.3",
  "openai>=2.7.2",
  "gunicorn==23.0.0",
  "httpx==0.28.1",
  "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"

[tool.hatch.build.targets.wheel]
packages = ["env", "graders", "models", "tasks", "utils"]
